# bifrost_ssi_stamper

./: Dockerfile  HISTORY.md  README.md  config.yaml  docker-compose.dev.yaml  docker-compose.yaml  launcher.py  pipeline.smk  requirements.dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: docker_build_and_push_to_dockerhub.yml
bifrost_ssi_stamper/: __init__.py  __main__.py  config.yaml  datadump.py  pipeline.smk
tests/: test_1_standard_workflow.py  test_simple.py
