[bumpversion]
current_version = v2_2_1
commit = True
tag = True

[metadata]
description-file = README.md

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:bifrost_min_read_check/config.yaml]
search = {current_version}
replace = {new_version}

[bumpversion:file:bifrost_min_read_check/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[tool:pytest]
minversion = 6.0
addopts = -ra -q --durations=0
testpaths =
    tests