[bumpversion]
current_version = 2.2.12
parse = ((?P<major>\d+))(\.(?P<minor>\d+))(\.(?P<patch>\d+))
serialize = {major}.{minor}.{patch}
commit = True
tag = True

[metadata]
description-file = README.md

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:bifrost_ssi_stamper/config.yaml]
search = {current_version}
replace = {new_version}

[bumpversion:file:bifrost_ssi_stamper/__init__.py]
search = __version__ = 'v{current_version}'
replace = __version__ = 'v{new_version}'

[bumpversion:file:tests/test_simple.py]
search = component_name = "ssi_stamper__v{current_version}"
replace = component_name = "ssi_stamper__v{new_version}"

[tool:pytest]
minversion = 6.0
addopts = -ra -q --durations=0
testpaths = 
	tests
